Expanded server, subject and tag service tests