@@ -12,8 +12,15 @@ import static org.mockito.Mockito.when;
 
 import de.uftos.dto.requestdtos.TagRequestDto;
 import de.uftos.entities.Break;
+import de.uftos.entities.Grade;
+import de.uftos.entities.Room;
 import de.uftos.entities.Server;
+import de.uftos.entities.Student;
+import de.uftos.entities.StudentGroup;
+import de.uftos.entities.Subject;
 import de.uftos.entities.Tag;
+import de.uftos.entities.Teacher;
+import de.uftos.entities.Timeslot;
 import de.uftos.entities.TimetableMetadata;
 import de.uftos.repositories.database.ConstraintInstanceRepository;
 import de.uftos.repositories.database.ConstraintSignatureRepository;
@@ -90,13 +97,34 @@ public class TagServiceTests {
     when(serverRepository.findAll()).thenReturn(List.of(server));
     when(tagRepository.findById("123")).thenReturn(Optional.of(tag));
     when(tagRepository.findAllById(List.of("123"))).thenReturn(List.of(tag));
-    when(teacherRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(studentGroupRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(studentRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(roomRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(subjectRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(gradeRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
-    when(timeslotRepository.findByTags(any(Tag.class))).thenReturn(Collections.emptyList());
+
+    Teacher teacherWithTag = new Teacher("teacherId");
+    teacherWithTag.setTags(List.of(tag));
+    when(teacherRepository.findAllByTags(List.of("123"))).thenReturn(List.of(teacherWithTag));
+
+    StudentGroup groupWithTag = new StudentGroup("groupId");
+    groupWithTag.setTags(List.of(tag));
+    when(studentGroupRepository.findAllByTags(List.of("123"))).thenReturn(List.of(groupWithTag));
+
+    Student studentWithTag = new Student("studentId");
+    studentWithTag.setTags(List.of(tag));
+    when(studentRepository.findAllByTags(List.of("123"))).thenReturn(List.of(studentWithTag));
+
+    Room roomWithTag = new Room("roomId");
+    roomWithTag.setTags(List.of(tag));
+    when(roomRepository.findAllByTags(List.of("123"))).thenReturn(List.of(roomWithTag));
+
+    Subject subjectWithTag = new Subject("subjectId");
+    subjectWithTag.setTags(List.of(tag));
+    when(subjectRepository.findAllByTags(List.of("123"))).thenReturn(List.of(subjectWithTag));
+
+    Grade gradeWithTag = new Grade("gradeId");
+    gradeWithTag.setTags(List.of(tag));
+    when(gradeRepository.findAllByTags(List.of("123"))).thenReturn(List.of(gradeWithTag));
+
+    Timeslot timeslotWithTag = new Timeslot("timeslotId");
+    timeslotWithTag.setTags(List.of(tag));
+    when(timeslotRepository.findAllByTags(List.of("123"))).thenReturn(List.of(timeslotWithTag));
   }
 
   @Test
@@ -126,6 +154,20 @@ public class TagServiceTests {
     Tag tag = tagCap.getValue();
     assertNotNull(tag);
     assertEquals("Wheelchair", tag.getName());
+  }
+
+  @Test
+  void createTagEmptyName() {
+    TagRequestDto requestDto =
+        new TagRequestDto("");
+    assertThrows(ResponseStatusException.class, () -> tagService.create(requestDto));
+  }
+
+  @Test
+  void updateTagEmptyName() {
+    TagRequestDto requestDto =
+        new TagRequestDto("");
+    assertThrows(ResponseStatusException.class, () -> tagService.update("123", requestDto));
   }
 
   @Test
